bug: fixed item context menu on mobile

--- a/src/client/src/ui/templates/context/styles.less
+++ b/src/client/src/ui/templates/context/styles.less
@@ -23,6 +23,7 @@
 			color: @white;
 			cursor: pointer;
 			display: flex;
+			touch-action: manipulation;
 			justify-content: center;
 
 			&:hover:not(.no-hover) {
